# ozseccon2019_badge

./: readme.md
fw/: Cargo.toml  openocd.cfg  test.py
fw/examples/: device.rs
fw/src/: config.rs  main.rs  ozsecconusb.rs.back  system.rs.back  systick.rs.back
fw/src/ozsecconusb/: .endpoint.rs.swo  endpoint.rs  mod.rs
fw/src/usb/: .leds.rs.swo  .leds.rs.swp  .magspoof.rs.swp  buttons.rs  card_peripheral.rs  command_packet.rs  descriptors.rs  leds.rs  magspoof.rs  mod.rs  system.rs  systick.rs  usb.rs
fw/src/usb/flash/: mod.rs  storage.rs  storage_page.rs  storage_slot.rs
hw/ozseccon_2019/Badge_2019/: microcontroller.bak  prototype-cache.lib  prototype.net  prototype.pro  prototype.sch
hw/ozseccon_2019/Badge_2019/Antenna.pretty/: Board_Outline.kicad_mod  ICC_FOOTPRINT.kicad_mod
hw/ozseccon_2019/Badge_2019/gerbers/: all  prototype-B.Cu.gbl  prototype.drl  (+8 more)
hw/ozseccon_2019/lib_dp.pretty/: AURA_LOGO.kicad_mod  BoldPort_Pin_Header_Straight_1x07_Pitch2.54mm.kicad_mod  Boldport_Pin_Header_Straight_1x04_Pitch2.54mm.kicad_mod  C_0805.kicad_mod  LED_1206.kicad_mod  LED_RGB_5050-6.kicad_mod  NFC_Antenna.kicad_mod  OzSecCon_Pin_Header_Straight_1x02_Pitch2.54mm.kicad_mod  OzSecCon_Pin_Header_Straight_2x02_Pitch2.54mm_SMD.kicad_mod  OzSecCon_Pin_Header_Straight_2x03_Pitch2.54mm_SMD.kicad_mod  OzSecCon_Pin_Header_Straight_2x08_Pitch2.54mm_SMD.kicad_mod  OzSecCon_SO-8_5.3x5.8mm_Pitch1.27mm.kicad_mod  OzSecCon_SO-8_5.3x6.2mm_Pitch1.27mm.kicad_mod  R_0805.kicad_mod  SC-70-6.kicad_mod  Skully.kicad_mod  Skully2.kicad_mod  Skully_Staff.kicad_mod  SpeakerText.kicad_mod  USB_Micro-B.kicad_mod  svg2mod.kicad_mod
ozseccon2019_utility/: carddata.json  cardutil.py
(+138 files in other folders)
