[package]
authors = ["Peter Fillmore"]
edition = "2018"
readme = "README.md"
name = "OzLockCon2019_USB"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
#panic-halt = "0.2.0"
#panic-semihosting = "0.5.2"
panic-abort = "0.3.1"
nb = "0.1.1"
vcell = "0.1.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
[dependencies.stm32f0xx-hal]
#features = ["rt"]
#version = "0.7.1"
version = "0.13.0"
features = ["rt", "stm32f042"]
#required-features = ["stm32f042", "rt"]
#path = "../stm32f0xx-hal-0.12.0_testpwm" 

[dependencies.embedded-hal]
version = "0.2.2"

#[dependencies.serde]
#version = "1.0"
#default-features = false 
#features= ["derive"]

#[dependencies.serde-json-core]
#version = "0.0.1"
#git = "https://github.com/japaric/serde-json-core"
#default-features = false 
#features= ["derive"]


#[dependencies.magspoof]
#version = "0.0.1"
#path = "../magspoof"

#[dependencies.usb-device]
#git = "https://github.com/mvirkkunen/usb-device"
#rev = "e58e30f3b9c9bf4aab00ea039d129b964a3fd2d3" 

#[dependencies.stm32f0]
#version = "0.5.0"
#features = ["stm32f0x1", "rt"]
#required-features = ["rt"]

#[features]
#rt = ["cortex-m-rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "OzLockCon2019_USB"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
